syntax = "proto3";

option go_package = "github.com/abu-umair/ecommerce-go-grpc-be/pb/product";//?optionnya ngambil di base_response.proto

import "buf/validate/validate.proto";//?import validate ambil di auth.proto


import "common/base_response.proto";


package product;


service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

message CreateProductRequest {
  string name = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string description = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  double price = 3 [(buf.validate.field).double.gte = 0]; //? price hanya bisa diisi dengan angka positif (diatas 0)
  string image_file_name = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message CreateProductResponse {
    common.BaseResponse base = 1;
    string id = 2;
}